Se arregló el diseño de la barra de busqueda, ya que ahora cuando se mantiene en focus el borde se cambia a color rosado

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -41,10 +41,12 @@
   font-size: 12px;
   outline: none;
   transition: border-color 0.2s ease;
+  width: 100%;
 }
 
 .search-input:focus {
   border-color: #F2C6C2;
+  width: 100%;
 }
 
 .search-button {
