--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -41,12 +41,11 @@
   font-size: 12px;
   outline: none;
   transition: border-color 0.2s ease;
-  width: 100%;
+  width: 500px;
 }
 
 .search-input:focus {
   border-color: #F2C6C2;
-  width: 100%;
 }
 
 .search-button {
